[workspace]
resolver = "2"
members = [
    "score/mw/lifecycle/lifecycle_client/rust",
    "score/mw/launch_manager/alive_monitor/rust",
    "score/mw/health/health_monitoring_lib",
    "examples/rust_supervised_app",
]
default-members = ["score/mw/health/health_monitoring_lib"]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["S-CORE Contributors"]
license-file = "LICENSE.md"

[workspace.dependencies]
libc = "0.2.177"
clap = { version = "4.5.49", features = ["derive"] }
signal-hook = "0.3.18"

monitor_rs = { path = "score/mw/launch_manager/alive_monitor/rust" } # Temporary API
health_monitoring_lib = { path = "score/mw/health/health_monitoring_lib" }
score_log = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.1.1" }
score_testing_macros = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.1.1" }
stdout_logger = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.1.1" }
containers = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.1.1" }
thread = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.1.1" }

[workspace.lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
