[workspace]
resolver = "2"
members = [
    "score/launch_manager/src/lifecycle_client/src/rust",
    "score/launch_manager/src/alive/src/rust",
    "score/health_monitor/src",
    "examples/rust_supervised_app",
]
default-members = ["score/health_monitor/src"]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["S-CORE Contributors"]
license-file = "LICENSE.md"

[workspace.dependencies]
libc = "0.2.177"
clap = { version = "4.5.49", features = ["derive"] }
signal-hook = "0.3.18"

alive_rs = { path = "score/launch_manager/src/alive/src/rust" } # Temporary API
health_monitoring_lib = { path = "score/health_monitor/src" }
score_log = { git = "https://github.com/eclipse-score/baselibs.git", rev = "f4f9df39275760a60e54e5e3c5112210e35ae2a3" }
score_testing_macros = { git = "https://github.com/eclipse-score/baselibs.git", rev = "f4f9df39275760a60e54e5e3c5112210e35ae2a3" }
stdout_logger = { git = "https://github.com/eclipse-score/baselibs.git", rev = "f4f9df39275760a60e54e5e3c5112210e35ae2a3" }
containers = { git = "https://github.com/eclipse-score/baselibs.git", rev = "f4f9df39275760a60e54e5e3c5112210e35ae2a3" }
thread = { git = "https://github.com/eclipse-score/baselibs.git", rev = "f4f9df39275760a60e54e5e3c5112210e35ae2a3" }

[workspace.lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
missing_docs = "warn"
