[package]
name = "rust_supervised_app"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "rust_supervised_app"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
libc = { workspace = true }
signal-hook = { workspace = true }
lifecycle_client_rs = { path = "../../score/launch_manager/lifecycle_client/src/rust" }
monitor_rs = { path = "../../score/launch_manager/daemon/src/alive_monitor/rust" }
health_monitoring_lib.workspace = true
score_log.workspace = true
stdout_logger.workspace = true
